makefile and bash script working

--- a/CS4100HW1/Makefile
+++ b/CS4100HW1/Makefile
@@ -21,7 +21,7 @@ cmos: cmos.cpp
 
 test: all PlagarismDetector
 	chmod +x PlagarismDetector
-	./PlagarismDetector
+	./PlagarismDetector Examples
 
 clean:
 	rm -f $(TARGET) lex.yy.c
